--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -170,6 +170,6 @@ year = {2022}
   abbr={Accepted},
   title={The ecology and evolution of key innovations},
   journal = {Trends in Ecology and Evolution},
-  author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B},
-  year={2022},
+  year = {2022},
+  author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B}
 }
