--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -170,6 +170,9 @@ year = {2022}
   abbr={Accepted},
   title={The ecology and evolution of key innovations},
   journal = {Trends in Ecology and Evolution},
-  year = {2022},
+  volume={37},
+  number={1},
+  pages={000--000},
+  year={2022},
   author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B}
 }
