--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -167,12 +167,13 @@ year = {2022}
 }
 
 @article{millerKIs,
-  abbr={Accepted},
+  abbr={TREE},
   title={The ecology and evolution of key innovations},
+  html = {https://doi.org/10.1016/j.tree.2022.09.005},
   journal = {Trends in Ecology and Evolution},
-  volume={37},
-  number={1},
-  pages={000--000},
-  year={2022},
+  volume={38},
+  number={2},
+  pages={122--131},
+  year={2023},
   author={Miller, Aryeh H and Stroud, James T and Losos, Jonathan B}
 }
