--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -173,7 +173,7 @@ issn = {null},
 journal = {Trends in Ecology and Evolution},
 number = {2},
 pages = {122--131},
-publisher = {Taylor \& Francis},
+publisher = {Cell Press},
 title = {The ecology and evolution of key innovations},
 html = {https://doi.org/10.1080/23802359.2022.2089067},
 volume = {38},
