--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,6 +3,7 @@
 
 @article{miller2020discovery,
   title={Discovery of a New Species of Enigmatic Odd-Scaled Snake (Serpentes: Xenodermidae: Achalinus) from Ha Giang Province, Vietnam},
+  abbr={Cover paper},
   author={Miller, Aryeh H and Davis, Hayden R and Luong, Anh Mai and Do, Quyen Hanh and Pham, Cuong The and Ziegler, Thomas and Lee, Justin L and De Queiroz, Kevin and Reynolds, R Graham and Nguyen, Truong Quang},
   abstract={Achalinus, commonly known as odd-scaled snakes due to their unique scutellation, are a fascinating group of xenodermid snakes distributed throughout east Asia. Currently, northern Vietnam is known to host six species of Achalinus, three of which are considered endemic. During recent herpetofaunal surveys conducted in the Bac Me District of Ha Giang Province, we collected a single specimen of Achalinus in a lowland region surrounded by secondary forest on karst. We conducted Bayesian and maximum likelihood phylogenetic analyses using multiple mitochondrial protein-coding loci and a ribosomal subunit to ascertain the phylogenetic position of the Ha Giang specimen among currently recognized odd-scaled snake species. The results of those analyses along with morphological differences support this specimen as representing a new species, which we describe as Achalinus zugorum, new species. We provide detailed morphological descriptions and comparisons of the new species as well as brief comments on the biogeography and conservation of Achalinus in northern Vietnam.},
   journal={Copeia},
@@ -42,6 +43,7 @@
 
 @article{miller2016morphology,
   title={Morphology and biology of the Asian Common Mockviper, Psammodynastes pulverulentus (Boie, 1827)(Serpentes: Lamprophiidae): a focus on Burmese populations},
+  abbr={Cover paper},
   author={Miller, Aryeh H and Zug, George R},
   abstract={Psammodynastes pulverulentus occurs widely and is moderately abundant in the forests of Myanmar. The species shows morphological uniformity throughout its distribution from Kachin-Sagaing to Tanintharyi. Although there are no size differences among adult females (mean¼326, 253–436 mm SVL) and males (322, 222–471 mm SVL), a few morphological features are sexually dimorphic: adult females have shorter tails than adult males (TailL/TotL means // 17%, ?? 20%) and relative head width and eye diameter are slightly larger in males. The number of ventral and subcaudal scales are only slightly different between females and males (median ventral, // 158.5, ?? 159; subcaudals, 54, 59.5, although significantly different). Our smaller Thai sample displayed the same pattern of variation in measurements and scalation as the Burmese sample. We developed a coding scheme for coloration and qualitatively demonstrate dimorphism in the Burmese sample; females are darker ventrally than males but females and males are the same dorsally. Other coloration traits are also dimorphic. In our Burmese sample, the number of adult males (n ¼ 21) outnumbered females (18). Adult females were most abundant in the 251–300 mm SVL size class, males of near equal abundance in 201–250, 251–300, and 301– 350 mm size classes. Relative to other Burmese snakes, P. pulverulentus ranked eighth in abundance, nearly equal number in frequency of occurrence with Dendrelaphis pictus. Our reproductive data do not clearly define reproductive periodicity and, based on large vitellogenic follicles, a likely clutch/litter size of 4 to 7. Although only 30% of our sample contained identifiable prey (frogs, lizards), most (67%) had digestive boluses in the lower half of the intestinal tract. Skinks were the dominant lizard prey and Limnonectes the dominant anurans. Uniformity or at least low differentiation between our Burmese and Thai samples and the results of Rasmussen (1975) advocate for the continued acceptance of the pan-Asian species concept for Psammodynastes pulverulentus.},
   journal={Proceedings of the Biological Society of Washington},
@@ -175,6 +177,7 @@ number = {2},
 pages = {122--131},
 publisher = {Cell Press},
 title = {The ecology and evolution of key innovations},
+abbr={Cover paper},
 html = {https://doi.org/10.1080/23802359.2022.2089067},
 volume = {38},
 year = {2023},
