--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -178,7 +178,7 @@ pages = {122--131},
 publisher = {Cell Press},
 title = {The ecology and evolution of key innovations},
 abbr={Cover paper},
-html = {https://doi.org/10.1080/23802359.2022.2089067},
+html = {https://www.cell.com/trends/ecology-evolution/fulltext/S0169-5347(22)00225-7?_returnURL=https%3A%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS0169534722002257%3Fshowall%3Dtrue},
 volume = {38},
 year = {2023},
 }
