--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -182,3 +182,12 @@ html = {https://www.cell.com/trends/ecology-evolution/fulltext/S0169-5347(22)002
 volume = {38},
 year = {2023},
 }
+
+@article{ReynoldsSE,
+author = {Reynolds, R.G. and Reger, M.E. and Peek, K.J. and Raphael, B.L. and Colosimo, G. and Miller, A.H. and Vanerelli, A.A. and Gerber, G.P.},
+journal = {The Herpetological Journal},
+title = {Spatial Ecology of the Turks \& Caicos Boa, \textit{Chilabothrus c. chrysogaster} Cope, 1871 (Serpentes: Boidae)},
+year = {2023},
+publisher = {The British Herpetological Society},
+}
+
