--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -140,6 +140,7 @@
   year={2022},
   html={https://academic.oup.com/sysbio/article/71/1/139/6295694},
   impactfactor={15.683},
+  preview = {Figure2_26May21.pdf},
   publisher={Oxford University Press}
 }
 
